# VLM

./: pyproject.toml  setup.py  train.py
configs/: data_config.yaml
src/data/: data_module.py
src/grad_cache/: grad_cache.py
src/inference/: classification.py  evaluation.py  inference_tool.py  utils.py
src/inference/classname_and_prompt/: BigEarth.py  RSAID.py  RSEuroSAT.py  RSMSEuroSAT.py  RSRESISC45.py  __init__.py
src/inference/clip_benchmark/metrics/: zeroshot_classification.py
src/inference/datasets/: __init__.py  aid.py  bigearthnet.py  eurosat.py  forestnet.py  resisc45.py
src/model/: factory.py  model_arch.py
