[tool.poetry]
name = "src"
version = "0.1.0"
description = "Multispectral CLIP based model"
authors = ["Clive Tinashe Marimo"]
# Specify the path to the src directory
#package = "src"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
# Add development dependencies here, for example:


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
